[gd_scene load_steps=13 format=3 uid="uid://dlni0vkfjodkp"]

[ext_resource type="Script" path="res://scripts/UserInterface.gd" id="1_cpq4r"]
[ext_resource type="Script" path="res://scripts/control.gd" id="1_uhqgs"]
[ext_resource type="Texture2D" uid="uid://bsuutyugehvy7" path="res://materials/sight.png" id="2_x1f3u"]
[ext_resource type="Script" path="res://scripts/PauseMenu.gd" id="2_ys448"]
[ext_resource type="Texture2D" uid="uid://bh2dt1f7lu2kf" path="res://resources/materials/highlighter.png" id="4_6f76t"]
[ext_resource type="Theme" uid="uid://dwyijvx7wroyq" path="res://resources/themes/menu_theme.tres" id="5_tw50m"]
[ext_resource type="Script" path="res://scripts/victory_menu.gd" id="6_3l50d"]

[sub_resource type="Theme" id="Theme_f5cei"]
default_font_size = 60

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5sisd"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_yl0yv"]
load_path = "res://.godot/imported/highlighter.png-9079bef6624fded57bd7b578e47d7106.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_t1f1q"]
load_path = "res://.godot/imported/highlighter.png-9079bef6624fded57bd7b578e47d7106.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_myq6w"]
load_path = "res://.godot/imported/highlighter.png-9079bef6624fded57bd7b578e47d7106.ctex"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uhqgs")

[node name="Pointer" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -90.5
offset_right = -36.0
offset_bottom = -67.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10, 8)
text = "+"

[node name="UserInterface" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -967.0
offset_top = -537.0
offset_right = 953.0
offset_bottom = 543.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cpq4r")

[node name="DeathScreen" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_right = 10.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.384314)

[node name="LashingNum" type="Label" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 83.0
grow_horizontal = 2
theme = SubResource("Theme_f5cei")
text = "1"

[node name="BindingLashIndicator" type="ColorRect" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_top = 21.0
offset_right = -24.0
offset_bottom = 71.0
grow_horizontal = 2
color = Color(1, 0, 0, 1)

[node name="Sight" type="Control" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UserInterface/Sight"]
modulate = Color(0.470076, 0.470076, 0.470076, 0.431373)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_x1f3u")

[node name="AreaHighlighter" type="Control" parent="UserInterface"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="Left" type="TextureRect" parent="UserInterface/AreaHighlighter"]
modulate = Color(0, 0.647059, 9.9451, 0)
material = SubResource("ShaderMaterial_5sisd")
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 585.0
offset_top = -951.0
offset_right = 2505.0
offset_bottom = 129.0
grow_vertical = 2
rotation = 1.5708
texture = ExtResource("4_6f76t")

[node name="Right" type="TextureRect" parent="UserInterface/AreaHighlighter"]
modulate = Color(0, 0.647059, 9.9451, 0)
material = SubResource("ShaderMaterial_5sisd")
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 448.0
offset_top = -941.0
offset_right = 2368.0
offset_bottom = 139.0
grow_horizontal = 0
grow_vertical = 2
rotation = 1.5708
texture = SubResource("CompressedTexture2D_yl0yv")

[node name="Top" type="TextureRect" parent="UserInterface/AreaHighlighter"]
modulate = Color(0, 0.647059, 9.9451, 0)
material = SubResource("ShaderMaterial_5sisd")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -1698.5
offset_top = -670.0
offset_right = 1698.5
offset_bottom = 693.0
grow_horizontal = 2
texture = SubResource("CompressedTexture2D_t1f1q")

[node name="Bottom" type="TextureRect" parent="UserInterface/AreaHighlighter"]
modulate = Color(0, 0.647059, 9.9451, 0)
material = SubResource("ShaderMaterial_5sisd")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1698.5
offset_top = -593.0
offset_right = 1698.5
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("CompressedTexture2D_myq6w")

[node name="VictoryMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("5_tw50m")
script = ExtResource("6_3l50d")

[node name="ColorRect2" type="ColorRect" parent="VictoryMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2263.0
offset_top = -1606.0
offset_right = 2125.0
offset_bottom = 1554.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="VBoxContainer" type="VBoxContainer" parent="VictoryMenu"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VictoryMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "VICTORY!"

[node name="ReturnToMainMenuButton" type="Button" parent="VictoryMenu/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_ys448")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -358.5
offset_top = -105.0
offset_right = 358.5
offset_bottom = 105.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_tw50m")
text = "Resume"

[node name="ExitToMainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_tw50m")
text = "Exit to Main Menu"

[node name="ExitGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_tw50m")
text = "Exit Game"

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2263.0
offset_top = -1606.0
offset_right = 2125.0
offset_bottom = 1554.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[connection signal="death_animation_done" from="UserInterface" to="." method="_on_user_interface_death_animation_done"]
[connection signal="button_down" from="VictoryMenu/VBoxContainer/ReturnToMainMenuButton" to="VictoryMenu" method="_on_return_to_main_menu_button_button_down"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ExitToMainMenuButton" to="PauseMenu" method="_on_exit_to_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ExitGameButton" to="PauseMenu" method="_on_exit_game_button_pressed"]
